--- a/ДЗ №2.md
+++ b/ДЗ №2.md
@@ -1,19 +1,15 @@
 # Инструкция для работы с Markdown
 
-## Выделение текста
+## 1.Выделение текста 
 
-Чтобы выделить текст курсивом необходимо обрамить его звездочками (*). Например, *вот так*.
+## 2.Списки 
 
-Чтобы выделить текст полужирным необходимо обрамить его двойными звездочками (**). Например, **вот так**
+## 3.Работа с изображениями
 
-## Списки
+## 4.Ссылки
 
-## Работа с изображениями
+## 5.Работа с таблицами
 
-## Ссылки
+## 6.Цитаты
 
-## Работа с таблицами
-
-## Цитаты
-
-## Заключение
+## 7.Заключение
