--- a/ДЗ №2.md
+++ b/ДЗ №2.md
@@ -2,6 +2,10 @@
 
 ## 1.Выделение текста 
 
+Чтобы выделить текст курсивом необходимо обрамить его звездочками (*). Например, *вот так*.
+
+Чтобы выделить текст полужирным необходимо обрамить его двойными звездочками (**). Например, **вот так**
+
 ## 2.Списки 
 
 ## 3.Работа с изображениями
