подготовка для конфликтного слияния

--- a/ДЗ №2.md
+++ b/ДЗ №2.md
@@ -3,6 +3,8 @@
 ## 1.Выделение текста 
 
 ## 2.Списки 
+Чтобы добавить ненумерованные списки, необходимо пункты выделить звездочкой (*) или знаком(+). Например, вот так:
++ Элемент 4
 
 ## 3.Работа с изображениями
 
